former-apps/immich/immich-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: immich
          image: localhost:32000/immich
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: immich
              subPath: immich-config
              mountPath: /config
            - name: immich
              subPath: immich-photos
              mountPath: /photos
            - name: public
              subPath: photos
              mountPath: /import
      volumes:
        - name: immich
          persistentVolumeClaim:
            claimName: immich
        - name: public
          persistentVolumeClaim:
            claimName: public
