former-apps/immich/immich-redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: immich-redis
          image: redis:7.2.4-alpine3.19
          ports:
            - containerPort: 6379
