former-apps/immich/immich-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
spec:
  type: ClusterIP
  selector:
    app: immich-postgres
  ports:
    - name: immich-postgres
      port: 5432
      targetPort: 5432
