former-apps/immich/immich-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
spec:
  type: ClusterIP
  selector:
    app: immich-redis
  ports:
    - name: immich-redis
      port: 6379
      targetPort: 6379
