former-apps/immich/immich-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  type: ClusterIP
  selector:
    app: immich
  ports:
    - name: immich
      port: 8080
      targetPort: 8080
