former-apps/immich/immich-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ext
  labels:
    type: external
spec:
  tls:
    - hosts:
        - immich.{hostname}
      secretName: immich.ing.cert
  rules:
    - host: immich.{hostname}
      http:
        paths:
          - backend:
              service:
                name: immich
                port:
                  number: 8080
            path: /
            pathType: Prefix
